tests/ui/generated/should_fail/test__kiss_ladder__R1_minus_R3.stderr
error[E0277]: cannot subtract `Relative<3>` from `Relative<1>`
 --> tests/ui/generated/should_fail/test__kiss_ladder__R1_minus_R3.rs:5:22
  |
5 |    let _ = R1::new() - R3::new();
  |                      ^ no implementation for `Relative<1> - Relative<3>`
  |
  = help: the trait `Sub<Relative<3>>` is not implemented for `Relative<1>`
  = help: the following other types implement trait `Sub<Rhs>`:
            `Relative<0>` implements `Sub<Relative<1>>`
            `Relative<0>` implements `Sub`
            `Relative<1>` implements `Sub<Relative<2>>`
            `Relative<1>` implements `Sub`
            `Relative<2>` implements `Sub<Relative<3>>`
            `Relative<2>` implements `Sub`
            `Relative<3>` implements `Sub<Relative<4>>`
            `Relative<3>` implements `Sub`
